# ashen-keep

./: .gitignore  README.md  pyproject.toml
docs/: AI_USAGE.md  DESIGN.md
docs/superpowers/plans/: 2026-04-24-ashen-keep-implementation.md
docs/superpowers/specs/: 2026-04-24-ashen-keep-design.md
src/ashen_keep/: __init__.py  __main__.py  cli.py  combat.py  content.py  engine.py  generation.py  models.py  rendering.py
tests/: test_cli_smoke.py  test_combat.py  test_content.py  test_engine.py  test_generation.py  test_items.py  test_models.py  test_package.py
